--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
-                    xmlns:grouping="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Grouping"
+                    xmlns:grouping="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService.Grouping"
                     xmlns:v="clr-namespace:WorkSpeed.DesktopClient.Views.Templates"
                     xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
     
@@ -14,7 +14,11 @@
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type grouping:AppointmentGroupingViewModel}">
-        <GroupBox Header="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <GroupBox Header="{Binding Name}" 
+                  HorizontalAlignment="Left" 
+                  VerticalAlignment="Top"
+                  Margin="0,0,10,0"
+                  >
             <ListBox ItemsSource="{Binding PositionGroupingVmCollection}"
                      VerticalAlignment="Top"
                      HorizontalAlignment="Left"
