--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Grouping/ShiftGroupingView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Grouping/ShiftGroupingView.xaml
@@ -3,13 +3,13 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Grouping"
+      xmlns:local="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService.Grouping"
       mc:Ignorable="d" 
       d:DesignHeight="100" d:DesignWidth="100"
       d:DataContext="{d:DesignInstance local:ShiftGroupingViewModel}"
       >
     <GroupBox Header="{Binding Name}" 
-              Padding="10" 
+              Padding="10,10,0,10" 
               IsHitTestVisible="True"
               Background="{StaticResource br_Window.Background}"
               >
