--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Grouping/PositionGroupingView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Grouping/PositionGroupingView.xaml
@@ -13,11 +13,12 @@
         <conv:WrapPanelMaxWidthConverter x:Key="conv_MaxWidth" />
     </Grid.Resources>
 
-    <ListBox x:Name="lb_PositionGrouping" Background="Transparent" BorderBrush="{x:Null}" Margin="0,5"
-                 HorizontalAlignment="Left" VerticalAlignment="Top"
-                 VerticalContentAlignment="Top"
-                 ItemsSource="{Binding EmployeeVmCollection}"
-                 >
+    <ListBox x:Name="lb_PositionGrouping" Background="Transparent" BorderBrush="{x:Null}" 
+             Margin="0,5"
+             HorizontalAlignment="Left" VerticalAlignment="Top"
+             VerticalContentAlignment="Top"
+             ItemsSource="{Binding EmployeeVmCollection}"
+             >
         <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
                 <WrapPanel VerticalAlignment="Top" 
