--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
@@ -4,11 +4,11 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       >
 
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto" SharedSizeGroup="A" />
+        <ColumnDefinition Width="Auto" SharedSizeGroup="EmployeesColumn" />
         <ColumnDefinition Width="Auto" />
     </Grid.ColumnDefinitions>
 
