--- a/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
@@ -23,7 +23,8 @@
     <Color x:Key="col_Control.ForegroundAlternative">#e0e0e0</Color>
 
     <Color x:Key="col_Button.Pressed.Background">#4a8fff</Color>
-    <Color x:Key="col_Button.MouseOver.Foreground">Green</Color>
+    <Color x:Key="col_Button.Foreground">Green</Color>
+    <Color x:Key="col_Button.Foreground2">DarkBlue</Color>
 
     <Color x:Key="col_Window.GlowDark.Top">#5c5c5c</Color>
     <Color x:Key="col_Window.GlowDark.Bottom">#808080</Color>
@@ -46,7 +47,8 @@
         <GradientStop Color="{DynamicResource col_Window.GlowLight.Bottom}" Offset="0.51" />
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="br_Button.MouseOver.Foreground" Color="{DynamicResource col_Button.MouseOver.Foreground }" />
+    <SolidColorBrush x:Key="br_Button.Foreground" Color="{DynamicResource col_Button.Foreground }" />
+    <SolidColorBrush x:Key="br_Button.Foreground2" Color="{DynamicResource col_Button.Foreground2 }" />
 
 
 </ResourceDictionary>
