--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/ProductivityDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/ProductivityDataTemplates.xaml
@@ -1,26 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:vp="clr-namespace:WorkSpeed.DesktopClient.Views.Productivity"
-                    xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
-                    xmlns:vme="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
+
+                    xmlns:vp="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Productivity"
+                    xmlns:ve="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Entities"
+
                     xmlns:vmp="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService.Productivity"
-                    xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
-    
+                    xmlns:vme="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService.Entities"
+                    >
+
+    <DataTemplate DataType="{x:Type vme:OperationViewModel}">
+        <vp:OperationHeaderView />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type vmp:ProductivityViewModel}">
         <vp:ProductivityView />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type vmp:EmployeeProductivityViewModel}">
-        <templates:EmployeeProductivityView />
+        <vp:EmployeeProductivityView />
     </DataTemplate>
-
-    <DataTemplate DataType="{x:Type vme:OperationViewModel}">
-        <entities:OperationView />
-    </DataTemplate>
-
-    <DataTemplate DataType="{x:Type vme:EmployeeViewModel}">
-        <templates:EmployeeView />
-    </DataTemplate>
-
 
 </ResourceDictionary>
