--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
@@ -1,9 +1,11 @@
-﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.Templates.EmployeeProductivityView"
+﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.EmployeeProductivityView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates"
+
+      xmlns:ve="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Entities"
+      xmlns:vp="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Productivity"
       mc:Ignorable="d"
       >
 
@@ -12,8 +14,8 @@
         <ColumnDefinition Width="Auto" />
     </Grid.ColumnDefinitions>
 
-    <templates:EmployeeView DataContext="{Binding EmployeeVm}" />
-    <ListBox Grid.Column="1" ItemsSource="{Binding ProductivityVms}" BorderThickness="0,1,0,0" >
+    <ve:ReadOnlyEmployeeView DataContext="{Binding EmployeeVm}" SnapsToDevicePixels="True" />
+    <ListBox Grid.Column="1" ItemsSource="{Binding ProductivityVmCollection}" BorderThickness="0,1,0,0" >
          <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
                 <StackPanel Orientation="Horizontal" />
