--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/OperationHeaderView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/OperationHeaderView.xaml
@@ -1,12 +1,12 @@
-﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.Entities.OperationView"
+﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.OperationHeaderView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
       mc:Ignorable="d" 
       Height="44" Width="94"
       Margin="0"
+      TextElement.Foreground="Black"
       >
     <Border BorderThickness="0,1,1,1" 
             BorderBrush="Black"
@@ -32,19 +32,20 @@
     <ToggleButton Style="{StaticResource st_ToggleButton.Head}" IsThreeState="True" Background="Transparent" />
 
     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,3,2">
-        <ToggleButton Style="{StaticResource st_ToggleButton.Letter}" >
+        <ToggleButton Style="{StaticResource st_ToggleButton.Letter}" Height="8" >
             <TextBlock>
                 <Run FontSize="6">N</Run>
             </TextBlock>
         </ToggleButton>
         <ToggleButton Style="{StaticResource st_ToggleButton.Letter}" 
-                      Margin="0,-2"
+                      Margin="0,-2" Height="8"
                       >
             <TextBlock>
                 <Run FontSize="6">N</Run>
             </TextBlock>
         </ToggleButton>
         <ToggleButton Style="{StaticResource st_ToggleButton.Letter}"
+                      Height="8"
                       >
             <TextBlock>
                 <Run FontSize="6">V</Run>
