--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/ProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/ProductivityView.xaml
@@ -1,29 +1,27 @@
-﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.Productivity.ProductivityView"
+﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.ProductivityView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WorkSpeed.DesktopClient.Views.Productivity"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Height="116" Width="94"
+      Height="136" Width="94"
       SnapsToDevicePixels="True"
+      TextElement.Foreground="Black"
       >
     <Grid.RowDefinitions>
         <RowDefinition />
-        <RowDefinition Height="22" />
+        <RowDefinition Height="42" />
     </Grid.RowDefinitions>
 
-    <CircleDiagramControl BorderThickness="0,0,1,1" 
-                          BorderBrush="Black" 
-                          ItemsSource="{Binding Aspects, Mode=OneWay}"
+    <CircleDiagramControl Grid.Row="0" ItemsSource="{Binding SelectedAspects, Mode=OneWay}"
                           Annotation="{Binding Annotation}"
                           />
 
-    <Border Grid.Row="1" BorderThickness="0,0,1,1" BorderBrush="Black">
+    <Border Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="{StaticResource br_Window.Border}">
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Run Text="{Binding Speed, Mode=OneWay}" /> <Run Text="{Binding SpeedLabeling, Mode=OneWay}" />
+            <Run Text="{Binding Speed, Mode=OneWay, StringFormat={}{0:N0}}" /> <Run Text="{Binding SpeedLabeling, Mode=OneWay}" />
         </TextBlock>
     </Border>
-
+    <Border Grid.Row="0" Grid.RowSpan="2" BorderBrush="Black" BorderThickness="0,0,1,1"></Border>
 </Grid>
