fixed bug with import actions

--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -405,7 +405,7 @@
                                     </StackPanel>
                                 </TabItem.Header>
 
-                                <!--<uc:EmployeeReportUserControl DataContext="{Binding EmployeeReportVm}" />-->
+                                <uc:EmployeeReportUserControl DataContext="{Binding EmployeeReportVm}" />
                             </TabItem>
 
                             <!-- Settings #2 -->
