--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/ProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/ProductivityView.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Height="136" Width="94"
@@ -14,11 +15,19 @@
         <RowDefinition Height="42" />
     </Grid.RowDefinitions>
 
-    <CircleDiagramControl Grid.Row="0" ItemsSource="{Binding SelectedAspects, Mode=OneWay}"
+    <CircleDiagramControl x:Name="cdc" Grid.Row="0" ItemsSource="{Binding SelectedAspects, Mode=OneWay}"
                           Annotation="{Binding Annotation}"
                           Indicator="{Binding Indicator}"
                           IndicatorTip="{Binding IndicatorTip}"
-                          />
+                          >
+        <behavior:Interaction.Triggers>
+            <behavior:EventTrigger EventName="MouseDown" SourceObject="{Binding ElementName=cdc}">
+                <behavior:InvokeCommandAction Command="{Binding NextCommand}" 
+                                              CommandParameter="{Binding}"
+                                              />
+            </behavior:EventTrigger>
+        </behavior:Interaction.Triggers>
+    </CircleDiagramControl>
 
     <Border Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="{StaticResource br_Window.Border}"
             ToolTip="{Binding SpeedTip}"
