--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -322,6 +322,7 @@
                         </Button>
                     </StackPanel>
 
+                    <!-- content -->
                     <Grid IsSharedSizeScope="True" 
                           HorizontalAlignment="Stretch" 
                       >
