--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/EmployeeProductivityView.xaml
@@ -7,6 +7,7 @@
       xmlns:ve="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Entities"
       xmlns:vp="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Productivity"
       mc:Ignorable="d"
+      IsSharedSizeScope="True"
       >
 
     <Grid.ColumnDefinitions>
