--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/ProductivityReportUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/ProductivityReportUserControl.xaml
@@ -14,7 +14,9 @@
         <conv:TabControlHeightConverter x:Key="conv_TabControlConverter" />
     </UserControl.Resources>
 
+
     <Grid Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType=TabControl}}"
+          IsSharedSizeScope="True"
           >
         <Grid.Height>
             <MultiBinding Converter="{StaticResource conv_TabControlConverter}">
@@ -23,49 +25,76 @@
             </MultiBinding>
         </Grid.Height>
 
-            <Grid IsSharedSizeScope="True">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition SharedSizeGroup="EmployeesColumn" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
 
-                    <Border BorderBrush="Black" BorderThickness="0,0,1,1" 
+        <ScrollViewer Grid.Row="0" Name="sv1"
+                      HorizontalScrollBarVisibility="Hidden"
+                      ScrollChanged="ScrollChanged"
+                      >
+            <Grid Grid.Row="0" 
+                  VerticalAlignment="Top" HorizontalAlignment="Left"
+                  Height="Auto"
+                  Margin="0,5,0,0"
+                  IsSharedSizeScope="True"
+                  >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition SharedSizeGroup="EmployeesColumn" Width="266" />
+                <ColumnDefinition  Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Border Grid.Column="0" 
+                    BorderBrush="Black" BorderThickness="0,0,1,1" 
                     SnapsToDevicePixels="True"
                     >
-                        <TextBlock>Empty Field</TextBlock>
-                    </Border>
+            </Border>
 
-                    <ListBox Grid.Column="1" ItemsSource="{Binding OperationVmCollection}" >
-                        <ListBox.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" />
-                            </ItemsPanelTemplate>
-                        </ListBox.ItemsPanel>
-                    </ListBox>
-                </Grid>
+            <ListBox Grid.Column="1" ItemsSource="{Binding OperationVmCollection}" >
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+            </ListBox>
+        </Grid>
+        </ScrollViewer>
 
-                <ListBox Grid.Row="1" ItemsSource="{Binding EmployeeProductivityVmCollection}" />
+
+        <ScrollViewer Grid.Row="1" Name="sv2"
+                      HorizontalScrollBarVisibility="Visible"
+                      ScrollChanged="ScrollChanged"
+                      >
+
+            <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                  IsSharedSizeScope="True"
+                  >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition SharedSizeGroup="EmployeesColumn" Width="266" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <ListBox Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding EmployeeProductivityVmCollection}" />
+
+                <TextBlock Grid.Column="1" 
+                           Text="{Binding ReportMessage}" 
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           Foreground="{StaticResource br_Window.Foreground}"
+                           >
+                <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding EmployeeProductivityVmCollection.Count}" Value="0" >
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
             </Grid>
+        </ScrollViewer>
 
-        <TextBlock Text="{Binding ReportMessage}" 
-                   VerticalAlignment="Center" HorizontalAlignment="Center"
-                   Foreground="{StaticResource br_Window.Foreground}"
-                   >
-            <TextBlock.Style>
-                <Style TargetType="TextBlock">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding EmployeeProductivityVmCollection.Count}" Value="0" >
-                            <Setter Property="Visibility" Value="Visible" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBlock.Style>
-        </TextBlock>
     </Grid>
 </UserControl>
