--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/OperationHeaderView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/OperationHeaderView.xaml
@@ -1,18 +1,27 @@
 ﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.OperationHeaderView"
+      x:Name="m_OperationHeaderGrid"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       Height="44" Width="94"
       Margin="0"
       TextElement.Foreground="Black"
       >
+
+    <behavior:Interaction.Triggers>
+        <behavior:EventTrigger EventName="MouseDown" SourceObject="{Binding ElementName=m_OperationHeaderGrid}">
+            <behavior:InvokeCommandAction Command="{Binding SortCommand}" />
+        </behavior:EventTrigger>
+    </behavior:Interaction.Triggers>
+
     <Border BorderThickness="0,1,1,1" 
             BorderBrush="Black"
             Padding="7,0"
             SnapsToDevicePixels="True"
-            Background="#e5e5e5"
+            Background="Transparent"
             >
         <TextBlock Text="{Binding Name}"
                    FontSize="11"
@@ -56,4 +65,35 @@
         </ToggleButton>
     </StackPanel>
 
+    <Grid.Style>
+        <Style TargetType="Grid">
+            <Setter Property="Background" Value="{StaticResource br_Control.Background2}"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard >
+                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                                              Duration="0:0:0.1"
+                                                              >
+                                    <LinearColorKeyFrame KeyTime="0:0:0.1" Value="{StaticResource col_Control.BackgroundMouseOver}" />
+                                </ColorAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard >
+                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                                              Duration="0:0:0.1"
+                                                              >
+                                    <LinearColorKeyFrame KeyTime="0:0:0.1" Value="{StaticResource col_Control.Background2}" />
+                                </ColorAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Grid.Style>
 </Grid>
