--- a/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/SortOperationHeaderView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ReportService/Productivity/SortOperationHeaderView.xaml
@@ -1,11 +1,12 @@
-﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.OperationHeaderView"
-      x:Name="m_OperationHeaderGrid"
+﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.ReportService.Productivity.SortOperationHeaderView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Productivity"
       xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
       Height="44" 
       Margin="0"
       TextElement.Foreground="Black"
@@ -17,20 +18,13 @@
         </behavior:EventTrigger>
     </behavior:Interaction.Triggers>
 
-    <Border BorderThickness="0,1,1,1" 
+    <Border BorderThickness="0,0,1,1" 
             BorderBrush="Black"
             Padding="7,0"
             SnapsToDevicePixels="True"
             Background="Transparent"
             >
-        <TextBlock Text="{Binding Name}"
-                   FontSize="11"
-                   TextAlignment="Center"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap"
-                   TextTrimming="CharacterEllipsis"
-                   />
+
     </Border>
 
     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,3,0">
@@ -38,34 +32,9 @@
         <Path Fill="Black" Data="M0,0 l 2,3 2,-3" />
     </StackPanel>
 
-    <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,3,2">
-        <ToggleButton Style="{StaticResource st_ToggleButton.Letter}" Height="8" >
-            <TextBlock>
-                <Run FontSize="6">N</Run>
-            </TextBlock>
-        </ToggleButton>
-        <ToggleButton Style="{StaticResource st_ToggleButton.Letter}" 
-                      Margin="0,-2" Height="8"
-                      >
-            <TextBlock>
-                <Run FontSize="6">N</Run>
-            </TextBlock>
-        </ToggleButton>
-        <ToggleButton Style="{StaticResource st_ToggleButton.Letter}"
-                      Height="8"
-                      >
-            <TextBlock>
-                <Run FontSize="6">V</Run>
-            </TextBlock>
-            <ToggleButton.RenderTransform>
-                <TranslateTransform X="0.5"></TranslateTransform>
-            </ToggleButton.RenderTransform>
-        </ToggleButton>
-    </StackPanel>
-
     <Grid.Style>
         <Style TargetType="Grid">
-            <Setter Property="Background" Value="{StaticResource br_Control.Background2}"/>
+            <Setter Property="Background" Value="{StaticResource br_Window.Background}"/>
             <Setter Property="Width" Value="94" />
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
@@ -86,7 +55,7 @@
                                 <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
                                                               Duration="0:0:0.1"
                                                               >
-                                    <LinearColorKeyFrame KeyTime="0:0:0.1" Value="{StaticResource col_Control.Background2}" />
+                                    <LinearColorKeyFrame KeyTime="0:0:0.1" Value="{StaticResource col_Window.Background}" />
                                 </ColorAnimationUsingKeyFrames>
                             </Storyboard>
                         </BeginStoryboard>
@@ -95,4 +64,4 @@
             </Style.Triggers>
         </Style>
     </Grid.Style>
-</Grid>
+    </Grid>
