--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/ProductivityReportUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/ProductivityReportUserControl.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService"
              xmlns:conv="clr-namespace:WorkSpeed.DesktopClient.Converters"
+             xmlns:vmp="clr-namespace:WorkSpeed.DesktopClient.Views.ReportService.Productivity"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:ProductivityReportViewModel}"
              d:DesignHeight="200" d:DesignWidth="800"
@@ -30,7 +31,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-
+        <!-- OperationHeader -->
         <ScrollViewer Grid.Row="0" Name="sv1"
                       HorizontalScrollBarVisibility="Hidden"
                       ScrollChanged="ScrollChanged"
@@ -46,20 +47,22 @@
                 <ColumnDefinition  Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Column="0" 
-                    BorderBrush="Black" BorderThickness="0,0,1,1" 
-                    SnapsToDevicePixels="True"
-                    >
-            </Border>
+                <Border Grid.Column="0"  
+                        SnapsToDevicePixels="True"
+                        >
+                    <vmp:SortOperationHeaderView DataContext="{Binding SortOperationVm}"
+                                             Width="266"
+                                             />
+                </Border>
 
-            <ListBox Grid.Column="1" ItemsSource="{Binding OperationVmCollection}" >
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal" />
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-            </ListBox>
-        </Grid>
+                <ListBox Grid.Column="1" ItemsSource="{Binding OperationVmCollection}" >
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                </ListBox>
+            </Grid>
         </ScrollViewer>
 
 
